<?xml version="1.0"?>
<package format="2">
  <name>ackermann_qt</name>
  <version>0.0.0</version>
  <description>
  
     Qt tele-operation interface for driving a vehicle with Ackermann
     steering under human control.The ackermann_qt package
     
  </description>


  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/ackermann_qt</url>
  <maintainer email="k9632441@gmail.com">Jaehun Kim</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
